syntax = "proto3";

package variables;

service Variables {
    rpc GetVariables (GetVariablesRequest) returns (GetVariablesResponse) {}
    rpc SetVariable (SetVariableRequest) returns (VoidResponse) {}
}

message GetVariablesRequest {
    repeated string keys = 1;
}

message GetVariablesResponse {
    message VariableEntry {
        string key = 1;
        string formula = 2;
    }

    repeated VariableEntry values = 1;
}

message SetVariableRequest {
    string key = 1;
    string formula = 2;
}

message VoidResponse {}